Add Smartphone EC Series assets (NST-082 to NST-085)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -473,6 +473,50 @@
                 </div>
             </div>
 
+            <!-- Card: Mobile Biz 1 -->
+            <div class="card" data-category="photo female business gadget" onclick="openModal('ec_mobile_biz_1')">
+                <img src="img/ec_mobile_biz_1.jpg" alt="Voice Command">
+                <div class="card-info">
+                    <span class="card-tag">Biz / DX</span>
+                    <span class="card-id">#NST-082</span>
+                    <h2 class="card-title">Voice Command</h2>
+                    <p class="card-desc">AI時代のワークスタイル。</p>
+                </div>
+            </div>
+
+            <!-- Card: Mobile City -->
+            <div class="card" data-category="photo female lifestyle gadget" onclick="openModal('ec_mobile_city')">
+                <img src="img/ec_mobile_city.jpg" alt="City Navigation">
+                <div class="card-info">
+                    <span class="card-tag">City / App</span>
+                    <span class="card-id">#NST-083</span>
+                    <h2 class="card-title">City Navigation</h2>
+                    <p class="card-desc">都市と共に生きる、スマートライフ。</p>
+                </div>
+            </div>
+
+            <!-- Card: Mobile Student -->
+            <div class="card" data-category="photo female education gadget" onclick="openModal('ec_mobile_student')">
+                <img src="img/ec_mobile_student.jpg" alt="Smart Learning">
+                <div class="card-info">
+                    <span class="card-tag">Edu / Tech</span>
+                    <span class="card-id">#NST-084</span>
+                    <h2 class="card-title">Smart Learning</h2>
+                    <p class="card-desc">学びを加速させるテクノロジー。</p>
+                </div>
+            </div>
+
+            <!-- Card: Mobile Biz 2 -->
+            <div class="card" data-category="photo female business gadget" onclick="openModal('ec_mobile_biz_2')">
+                <img src="img/ec_mobile_biz_2.jpg" alt="Global Connect">
+                <div class="card-info">
+                    <span class="card-tag">Biz / Global</span>
+                    <span class="card-id">#NST-085</span>
+                    <h2 class="card-title">Global Connect</h2>
+                    <p class="card-desc">世界と繋がる、一瞬の決断。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
