Add EC Model Series (NST-086 to NST-090)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -517,6 +517,61 @@
                 </div>
             </div>
 
+            <!-- Card: Model Cosmetics -->
+            <div class="card" data-category="photo female beauty lifestyle" onclick="openModal('ec_model_cosmetics')">
+                <img src="img/ec_model_cosmetics.png" alt="Glamour Rouge">
+                <div class="card-info">
+                    <span class="card-tag">Beauty / Make</span>
+                    <span class="card-id">#NST-086</span>
+                    <h2 class="card-title">Glamour Rouge</h2>
+                    <p class="card-desc">魔法をかける、朝の儀式。</p>
+                </div>
+            </div>
+
+            <!-- Card: Model Apparel -->
+            <div class="card" data-category="photo female fashion lifestyle" onclick="openModal('ec_model_apparel')">
+                <img src="img/ec_model_apparel.png" alt="Autumn Stride">
+                <div class="card-info">
+                    <span class="card-tag">Fashion / City</span>
+                    <span class="card-id">#NST-087</span>
+                    <h2 class="card-title">Autumn Stride</h2>
+                    <p class="card-desc">旅と日常、私らしい選択。</p>
+                </div>
+            </div>
+
+            <!-- Card: Model Alcohol -->
+            <div class="card" data-category="photo female lifestyle" onclick="openModal('ec_model_alcohol')">
+                <img src="img/ec_model_alcohol.png" alt="Bar Lounge Night">
+                <div class="card-info">
+                    <span class="card-tag">Bar / Chill</span>
+                    <span class="card-id">#NST-088</span>
+                    <h2 class="card-title">Bar Lounge Night</h2>
+                    <p class="card-desc">大人を楽しむ、上質な夜。</p>
+                </div>
+            </div>
+
+            <!-- Card: Model Appliance -->
+            <div class="card" data-category="photo female lifestyle gadget" onclick="openModal('ec_model_appliance')">
+                <img src="img/ec_model_appliance.png" alt="Morning Breeze">
+                <div class="card-info">
+                    <span class="card-tag">Life / Tech</span>
+                    <span class="card-id">#NST-089</span>
+                    <h2 class="card-title">Morning Breeze</h2>
+                    <p class="card-desc">暮らしを整える、新しい風。</p>
+                </div>
+            </div>
+
+            <!-- Card: Model Sundries -->
+            <div class="card" data-category="photo female lifestyle" onclick="openModal('ec_model_sundries')">
+                <img src="img/ec_model_sundries.png" alt="Stationery Lover">
+                <div class="card-info">
+                    <span class="card-tag">Shop / Paper</span>
+                    <span class="card-id">#NST-090</span>
+                    <h2 class="card-title">Stationery Lover</h2>
+                    <p class="card-desc">手帳を開く、小さな幸せ。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
