Add Beauty Portrait asset & link Balm LP

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -572,6 +572,17 @@
                 </div>
             </div>
 
+            <!-- Card: Model Skin Base -->
+            <div class="card" data-category="photo female beauty" onclick="openModal('ec_model_skin_base')">
+                <img src="img/ec_model_skin_base.png" alt="Pure Skin Base">
+                <div class="card-info">
+                    <span class="card-tag">Beauty / Skin</span>
+                    <span class="card-id">#NST-091</span>
+                    <h2 class="card-title">Pure Skin Base</h2>
+                    <p class="card-desc">誤魔化しのない、本物の透明感。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
