Add Web/LP category and filter

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -463,10 +463,11 @@
             </div>
 
             <!-- Card: Luxury Beauty -->
-            <div class="card" data-category="photo female business gadget" onclick="openModal('ec_beauty_luxury')">
+            <div class="card" data-category="photo female business gadget web-lp"
+                onclick="openModal('ec_beauty_luxury')">
                 <img src="img/ec_beauty_luxury.jpg" alt="Luxury Essence">
                 <div class="card-info">
-                    <span class="card-tag">Beauty / Lux</span>
+                    <span class="card-tag">Web / LP Sample</span>
                     <span class="card-id">#NST-081</span>
                     <h2 class="card-title">Luxury Essence</h2>
                     <p class="card-desc">極上の美と、深遠なる世界観。</p>
