--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -33,6 +33,7 @@
             <h3>Purpose</h3>
             <div class="filter-buttons">
                 <button class="filter-btn" data-filter="gadget">EC / Gadget</button>
+                <button class="filter-btn" data-filter="web-lp">Web / LP</button>
                 <button class="filter-btn" data-filter="youtube">YouTube / BG</button>
                 <button class="filter-btn" data-filter="business">Business</button>
                 <button class="filter-btn" data-filter="lifestyle">Lifestyle</button>
