Refine LP: Add solo product shot, remove lip usage

--- a/imagestock/balm_lp.html
+++ b/imagestock/balm_lp.html
@@ -355,9 +355,9 @@
 
     <section class="visual-section">
         <div class="visual-item">
-            <img src="img/ec_model_cosmetics.png" alt="Make up scene">
+            <img src="img/ec_product_balm_solo.png" alt="Product Detail">
             <div class="visual-text">
-                <p>Morning Ritual</p>
+                <p>Art of Texture</p>
             </div>
         </div>
         <div class="visual-item">
