Fix LP hero crop: Increase smooth zoom to 1.2

--- a/imagestock/balm_lp.html
+++ b/imagestock/balm_lp.html
@@ -95,8 +95,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            transform: scale(1.05);
-            /* Zoom to hide watermark */
+            transform: scale(1.2);
+            /* Zoom aggressively to hide watermark */
             transform-origin: center center;
         }
 
