Add Related Product section (Lipstick) with placeholder

--- a/imagestock/balm_lp.html
+++ b/imagestock/balm_lp.html
@@ -369,10 +369,40 @@
                 <p>Pure Clarity</p>
             </div>
         </div>
-        <div class="visual-item">
-            <img src="img/ec_model_cosmetics.png" alt="Make up scene">
-            <div class="visual-text">
-                <p>Morning Ritual</p>
+    </section>
+
+    <section class="related-product" style="padding: 50px 20px; background: #050505;">
+        <div style="max-width: 1000px; margin: 0 auto; text-align: center;">
+            <h3
+                style="font-family: var(--font-display); color: var(--color-gold); letter-spacing: 0.2em; margin-bottom: 40px;">
+                PAIRING WITH</h3>
+
+            <div
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; align-items: center;">
+                <!-- Product Solo (Placeholder until generation works) -->
+                <div class="visual-item"
+                    style="height: 500px; background: #111; display: flex; align-items: center; justify-content: center; border: 1px solid #333;">
+                    <p style="color: #555; font-family: var(--font-display);">IMAGE GENERATING...</p>
+                </div>
+
+                <!-- Usage Scene -->
+                <div class="visual-item" style="height: 500px;">
+                    <img src="img/ec_model_cosmetics.png" alt="Rouge Usage">
+                    <div class="visual-text">
+                        <p>LUMIÈRE ROUGE</p>
+                    </div>
+                </div>
+            </div>
+
+            <div style="margin-top: 40px; text-align: left; max-width: 600px; margin-left: auto; margin-right: auto;">
+                <h4 style="font-family: var(--font-serif); font-size: 1.5rem; margin-bottom: 10px;">LUMIÈRE ROUGE <span
+                        style="font-size:0.8rem; color:#888;">No.5 Velvet Red</span></h4>
+                <p style="color: #ccc; margin-bottom: 20px;">
+                    バームで整えた唇に、鮮烈な彩りを。保湿成分配合で、マットなのに乾かない、至高のルージュ。
+                </p>
+                <a href="#"
+                    style="color: var(--color-gold); text-decoration: none; border-bottom: 1px solid var(--color-gold); padding-bottom: 5px;">VIEW
+                    DETAIL</a>
             </div>
         </div>
     </section>
