Add lipstick product image with square crop and zoom

--- a/imagestock/balm_lp.html
+++ b/imagestock/balm_lp.html
@@ -379,15 +379,16 @@
 
             <div
                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; align-items: center;">
-                <!-- Product Solo (Placeholder until generation works) -->
-                <div class="visual-item"
-                    style="height: 500px; background: #111; display: flex; align-items: center; justify-content: center; border: 1px solid #333;">
-                    <p style="color: #555; font-family: var(--font-display);">IMAGE GENERATING...</p>
+                <!-- Product Solo -->
+                <div class="visual-item" style="height: auto; aspect-ratio: 1/1; position: relative;">
+                    <img src="img/ec_product_lipstick_solo.png" alt="Lipstick Detail"
+                        style="width: 100%; height: 100%; object-fit: cover; transform: scale(1.2);">
                 </div>
 
                 <!-- Usage Scene -->
-                <div class="visual-item" style="height: 500px;">
-                    <img src="img/ec_model_cosmetics.png" alt="Rouge Usage">
+                <div class="visual-item" style="height: auto; aspect-ratio: 1/1;">
+                    <img src="img/ec_model_cosmetics.png" alt="Rouge Usage"
+                        style="width: 100%; height: 100%; object-fit: cover;">
                     <div class="visual-text">
                         <p>LUMIÈRE ROUGE</p>
                     </div>
