Highlight Web/LP filter

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -32,8 +32,10 @@
         <div class="filter-group">
             <h3>Purpose</h3>
             <div class="filter-buttons">
+                <button class="filter-btn" data-filter="web-lp"
+                    style="border-color: var(--primary-neon); color: var(--primary-neon); font-weight:700;">✨ Web / LP
+                    (Demo) ✨</button>
                 <button class="filter-btn" data-filter="gadget">EC / Gadget</button>
-                <button class="filter-btn" data-filter="web-lp">Web / LP</button>
                 <button class="filter-btn" data-filter="youtube">YouTube / BG</button>
                 <button class="filter-btn" data-filter="business">Business</button>
                 <button class="filter-btn" data-filter="lifestyle">Lifestyle</button>
