Force script reload with version tag

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -867,7 +867,7 @@
         <p>&copy; 2025 ニストAI (by Nayuta). Created with An (Antigravity).</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.1"></script>
 </body>
 
 </html>
