Add Project STAR MAKER pitch slides

--- a/instatool/voiceschool/post_voice_school_slide.html
+++ b/instatool/voiceschool/post_voice_school_slide.html
@@ -590,45 +590,45 @@
     </div>
 
     <script>
-        // --- Initial Data (Voice School Theme - Trustworthy Speaking) ---
+        // --- Initial Data (Voice School Theme - Adult-like Speech & Voice Pitch) ---
         const defaultSlides = [
             {
-                tag: "TRUST", tagS: 1.0, catch: "「この人、本当に信用できる？」\nそう思われる話し方の正体。", sub: "",
+                tag: "VOICE", tagS: 1.0, catch: "大人っぽい話し方は\n声の高さで決まる", sub: "",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.9, scale: 1.1,
                 tagM: 120, catchS: 6.5, catchM: 80, subS: 2.2, subM: 40,
-                frame: "simple", deco: "fas fa-question", decoS: 15, decoX: 50, decoY: 20, decoO: 0.2
+                frame: "simple", deco: "fas fa-microphone", decoS: 15, decoX: 50, decoY: 20, decoO: 0.2
             },
             {
-                tag: "REALITY", tagS: 1.0, catch: "仕事ができる人と、できない人。\n決定的な差は「声の高さ」にあった。", sub: "言っていることは同じでも、\nなぜか説得力が違う。\n\nその秘密は、声の「キー（高さ）」の\nコントロールにあります。",
+                tag: "REALITY", tagS: 1.0, catch: "今日、契約何件取れました？", sub: "実は、成績が伸び悩む営業の方には\nある共通点があるんです。\n\nそれは「声が高すぎる」こと。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-exclamation", decoS: 20, decoX: 80, decoY: 80, decoO: 0.1
             },
             {
-                tag: "PROBLEM", tagS: 1.0, catch: "ずっと声が高い人は、\n「何も考えていない」と思われる。", sub: "一本調子で高い声のままだと、\nどうしても「軽薄」「適当」な印象を与えます。\n\n逆に、ただ低いだけだと\n「不機嫌」「怖い」と思われてしまいます。",
+                tag: "PROBLEM", tagS: 1.0, catch: "ずっと高い声で話すと\n「抜けてる人」に見える", sub: "緊張すると声が高くなる\n→ 早口になる\n→ 信頼感が下がる\n\nこのループ、心当たりありませんか？",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
-                frame: "simple", deco: "fas fa-microphone-slash", decoS: 20, decoX: 20, decoY: 30, decoO: 0.1
+                frame: "simple", deco: "fas fa-arrow-up", decoS: 20, decoX: 20, decoY: 30, decoO: 0.1
             },
             {
-                tag: "METHOD", tagS: 1.0, catch: "信頼される話し方の黄金法則。\n「入りは高く、徐々に低く」。", sub: "話し始めは明るく高めに。\nそこから語尾に向かって、\nゆっくりと落ち着かせていく。\n\nこれが「知性」と「安心感」を作る技術です。",
+                tag: "SOLUTION", tagS: 1.0, catch: "落ち着いた低めの声が\n「この人なら安心」を作る", sub: "話し始めは高めでOK。\nそこから徐々に声を低くしていく。\n\nこれが大人っぽさの正体です。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
-                frame: "simple", deco: "fas fa-arrow-right", decoS: 20, decoX: 50, decoY: 90, decoO: 0.1
+                frame: "simple", deco: "fas fa-arrow-down", decoS: 20, decoX: 50, decoY: 90, decoO: 0.1
             },
             {
-                tag: "IMPACT", tagS: 1.0, catch: "声のコントロール一つで、\nあなたの評価は劇的に変わる。", sub: "「この人に任せたい」\n「この人の話なら聞きたい」\n\n信頼は、言葉の内容以前に\n『声』で作られるのです。",
+                tag: "TRAINING", tagS: 1.0, catch: "声は技術です。\nトレーニングで必ず変わります。", sub: "１. 深呼吸してから話し始める\n２. 意識的にゆっくり話す\n３. 声の「高さ」を確認する習慣",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-lightbulb", decoS: 15, decoX: 80, decoY: 20, decoO: 0.1
             },
             {
-                tag: "OFFER", tagS: 1.0, catch: "「信頼される声」を手に入れる。\nプロが教える30分。", sub: "あなたの話し方のクセを診断し、\n「仕事ができる声」へチューニングします。\n\nまずは無料で体験しませんか？",
+                tag: "OFFER", tagS: 1.0, catch: "あなたの声、\nもっと武器になります。", sub: "声のプロが、あなたの話し方のクセを診断。\n「大人っぽい声」へチューニングします。\n\nまずは無料で体験しませんか？",
                 bonus: "詳しくはプロフィールへ", bonusS: 2.5, cta: "体験レッスンに申し込む", ctaS: 2.0,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.85, scale: 1.1,
                 tagM: 60, catchS: 6.0, catchM: 40, subS: 2.0, subM: 40,
