Fix studio name and remove project title

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project STAR MAKER - Nist Studio</title>
+    <title>Promotion Strategy - Nyct Studio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/reveal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/theme/white.css" id="theme">
     <style>
@@ -276,12 +276,12 @@
             <section style="text-align: center;"> <!-- Center align text for title -->
                 <div>
                     <p style="font-size: 1.2em; color: #666; letter-spacing: 0.2em; margin-bottom: 20px;">
-                        Promotion & Star Development
+                        Promotion & Executive Branding
                     </p>
                     <h1 style="border: none; font-size: 3.5em !important; margin: 0 0 40px 0 !important;">
-                        Project "STAR MAKER"
+                        プロモーション事業計画
                     </h1>
-                    <p style="font-size: 1.2em;">NiCT Studio Business Plan 2026</p>
+                    <p style="font-size: 1.2em;">Nyct Studio Business Plan 2026</p>
                 </div>
             </section>
 
@@ -354,7 +354,7 @@
                     <tr>
                         <th style="width:20%">Type</th>
                         <th style="width:30%">正体（原因）</th>
-                        <th style="width:50%">NiCT Studioの解決策</th>
+                        <th style="width:50%">Nyct Studioの解決策</th>
                     </tr>
                     <tr>
                         <td><strong>現場型</strong><br>（プレイング）</td>
@@ -450,7 +450,7 @@
             <section style="text-align: center;">
                 <div>
                     <h1 style="border:none; font-size: 2.5em !important; margin-bottom: 20px !important;">
-                        NiCT Studio
+                        Nyct Studio
                     </h1>
                     <p>Producer / Narrator : Nayuta Akiyama</p>
                     <p style="margin-top: 40px; font-size: 0.8em; color: #666;">
