Analyze and customize pitch for I LIFE Inc.

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -281,7 +281,8 @@
                     <h1 style="border: none; font-size: 3.5em !important; margin: 0 0 40px 0 !important;">
                         プロモーション事業計画
                     </h1>
-                    <p style="font-size: 1.2em;">Nyct Studio Business Plan 2026</p>
+                    <p style="font-size: 1.2em;">For 株式会社 I LIFE 様</p>
+                    <p style="font-size: 1.0em; color: #999; margin-top: 10px;">Nyct Studio Business Plan 2026</p>
                 </div>
             </section>
 
@@ -317,28 +318,29 @@
 
             <!-- 3. Target Problem -->
             <section>
-                <h2>2. ターゲット：独立2年目の警備会社社長</h2>
+                <h2>2. 現状分析：株式会社 I LIFE (2023年設立)</h2>
                 <div class="cols dense-text">
                     <div class="col-6">
-                        <h3>Pain Points (悩み)</h3>
+                        <h3>Strengths (御社の強み)</h3>
                         <div class="box">
                             <ul>
-                                <li><strong>人が来ない（採用難）</strong>: <br>大手と同じ時給条件では勝てず、3Kのイメージも払拭できない。</li>
-                                <li><strong>現場から抜けられない</strong>: <br>人手不足で社長自身が現場に出るため、営業や経営戦略に時間を使えない。</li>
-                                <li><strong>「忙しい」が口癖</strong>: <br>漠然とした不安と、目の前の業務（シフト管理等）で思考停止している。</li>
+                                <li><strong>エリアトップクラスの高日給</strong>: <br>「稼げる」という強力な武器がある。</li>
+                                <li><strong>福利厚生の充実</strong>: <br>ジム利用補助、寮完備、車両貸出など、若者に刺さる手厚さ。</li>
+                                <li><strong>社長の現場力</strong>: <br>「社長も現場に出ている」ことは、若手にとって圧倒的な信頼と親近感になる。</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-6">
-                        <h3>Solution (解決策)</h3>
+                        <h3>Strategy (次のステージへ)</h3>
                         <div class="box" style="border: 2px solid #ff4081;">
                             <p style="text-align: center; font-weight: bold; font-size: 1.2em;">
-                                「条件」で戦わず、<br>「社長の男気」で採用する。
+                                「好条件」×「ブランド」で<br>最強のチームを作る。
                             </p>
                             <hr style="margin: 10px 0;">
                             <p>
-                                警備員ではなく<strong>「社長の右腕」</strong>を募集する。<br>
-                                そのために、社長の人生ドラマを<strong>「THE FIRST TAKE」風の映像</strong>にし、共感採用を狙う。
+                                条件（日給）で来る人は、条件で去ります。<br>
+                                社長の<strong>「独立支援」や「挑戦マインド」</strong>に共感する、<br>
+                                <strong>「右腕候補（幹部候補）」</strong>を動画で惹きつけましょう。
                             </p>
                         </div>
                     </div>
