Fix Services box style to light theme

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -303,9 +303,9 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="box" style="padding: 20px !important; background-color: #333; color: #fff;">
-                            <h3 style="color: #fff !important; border-bottom: 1px dashed #777;">Services</h3>
-                            <ul style="color: #fff;">
+                        <div class="box" style="padding: 20px !important;">
+                            <h3 style="font-size: 1.1em !important; margin: 5px 0 8px 0 !important;">Services</h3>
+                            <ul>
                                 <li><strong>Phase 1: 憑依 (Story)</strong><br>徹底取材による思考の言語化</li>
                                 <li><strong>Phase 2: 演出 (Direction)</strong><br>話し方・振る舞いの指導</li>
                                 <li><strong>Phase 3: 開演 (Promotion)</strong><br>映像化・広告展開</li>
