Expand slides, add case studies, fix title size, remove partner

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -278,7 +278,7 @@
                     <p style="font-size: 1.2em; color: #666; letter-spacing: 0.2em; margin-bottom: 20px;">
                         Promotion & Executive Branding
                     </p>
-                    <h1 style="border: none; font-size: 3.5em !important; margin: 0 0 40px 0 !important;">
+                    <h1 style="border: none; font-size: 2.8em !important; margin: 0 0 40px 0 !important;">
                         プロモーション事業計画
                     </h1>
                     <p style="font-size: 1.2em;">For 株式会社 I LIFE 様</p>
@@ -345,7 +345,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="slide-number">3 / 7</div>
+                <div class="slide-number">3 / 10</div>
+            </section>
+
+            <!-- 3.5 New Slide: Why Video? (Evidence) -->
+            <section>
+                <h2>3. なぜ今、「動画」なのか？</h2>
+                <div class="cols">
+                    <div class="col-6">
+                        <div class="box">
+                            <h3 style="margin-top:0;">採用市場のデータ</h3>
+                            <p>
+                                求職者が応募前に「動画」を見ると、<br>
+                                <strong>応募率は約3倍</strong>に跳ね上がります。<br>
+                                <span style="font-size:0.8em; color:#666;">(※Indeed採用市場レポート参照)</span>
+                            </p>
+                            <hr>
+                            <p>
+                                特に20代-30代は、<br>
+                                「文字」よりも「雰囲気（動画）」で<br>
+                                職場環境を判断する傾向が顕著です。
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="box simple">
+                            <h3 style="margin-top:0;">成功事例 (Case Study)</h3>
+                            <ul>
+                                <li><strong>A社（建築業・社員10名）</strong>:<br>
+                                    社長の想いを語る動画を公開後、<br>
+                                    採用コスト0円で3名の若手を採用。</li>
+                                <li style="margin-top:15px;"><strong>B社（運送業）</strong>:<br>
+                                    「キツい」イメージを「カッコいい」に転換し、<br>
+                                    未経験からの応募が殺到。</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide-number">4 / 10</div>
             </section>
 
             <!-- 4. Objection Handling -->
@@ -379,7 +416,36 @@
                         <td>→ <strong>壁打ち（インタビュー）</strong>で脳内を整理し、方針を言語化します。</td>
                     </tr>
                 </table>
-                <div class="slide-number">4 / 7</div>
+                <div class="slide-number">5 / 10</div>
+            </section>
+
+            <!-- 5. New Slide: Process -->
+            <section>
+                <h2>5. 導入プロセス (Flow)</h2>
+                <p>社長の手間は最小限に。最初の「取材」だけ、私に時間をください。</p>
+
+                <div style="display:flex; justify-content:space-between; margin-top:30px;">
+                    <div style="width:23%;" class="box">
+                        <h4 style="color:#ff4081;">Step 1: 取材</h4>
+                        <p style="font-size:0.9em"><strong>(ヒアリング)</strong><br>社長の過去・現在・未来を徹底的に深掘りします。<br>※約60〜90分</p>
+                    </div>
+                    <div style="width:2%; text-align:center; padding-top:40px;">▶</div>
+                    <div style="width:23%;" class="box">
+                        <h4 style="color:#333;">Step 2: 企画・構成</h4>
+                        <p style="font-size:0.9em">取材内容を元に、最も刺さる「切り口」と「台本」を作成します。</p>
+                    </div>
+                    <div style="width:2%; text-align:center; padding-top:40px;">▶</div>
+                    <div style="width:23%;" class="box">
+                        <h4 style="color:#333;">Step 3: 撮影</h4>
+                        <p style="font-size:0.9em">プロ機材を持ち込み、インタビュー風景や現場の様子を撮影します。</p>
+                    </div>
+                    <div style="width:2%; text-align:center; padding-top:40px;">▶</div>
+                    <div style="width:23%;" class="box">
+                        <h4 style="color:#333;">Step 4: 公開</h4>
+                        <p style="font-size:0.9em">編集後、YouTubeや求人媒体、SNSで公開し、運用を開始します。</p>
+                    </div>
+                </div>
+                <div class="slide-number">6 / 10</div>
             </section>
 
             <!-- 5. Market Rates -->
@@ -445,7 +511,50 @@
                         さあ、社長の物語を、世界に公開しましょう。
                     </p>
                 </div>
-                <div class="slide-number">6 / 7</div>
+                <div class="slide-number">7 / 10</div>
+            </section>
+
+            <!-- 6. Killer Message -->
+            <section style="display: flex; flex-direction: column; justify-content: center; height: 100%;">
+                <h2 style="border-left: none; text-align: center;">なぜ、「今」やるべきか？</h2>
+                <div class="box" style="padding: 30px; border: none; background: transparent;">
+                    <p style="font-size: 1.5em !important; text-align: center; margin-bottom: 30px;">
+                        「忙しい」と言っている間に、<br>
+                        ライバルは「発信」を始めています。
+                    </p>
+                    <p style="text-align: center;">
+                        私がいただくのは「制作費」ではありません。<br>
+                        <strong>「社長が本来やるべき仕事に集中するための時間」への投資</strong>です。
+                    </p>
+                    <p style="text-align: center; font-weight: bold; margin-top: 30px;">
+                        さあ、社長の物語を、世界に公開しましょう。
+                    </p>
+                </div>
+                <div class="slide-number">8 / 10</div>
+            </section>
+
+            <!-- New Slide: About -->
+            <section>
+                <h2 style="border-left: none; text-align: center;">Profile</h2>
+                <div class="cols">
+                    <div class="col-4" style="text-align:center;">
+                        <!-- Placeholder for Image if needed, text for now -->
+                        <div
+                            style="width:200px; height:200px; background:#ddd; border-radius:50%; margin:0 auto; display:flex; align-items:center; justify-content:center; color:#888;">
+                            Photo</div>
+                    </div>
+                    <div class="col-8" style="flex:2; padding-left:20px;">
+                        <h3 style="border:none;">秋山 那由他 (Nayuta Akiyama)</h3>
+                        <p><strong>Producer / Narrator</strong></p>
+                        <p style="font-size:0.9em;">
+                            元大手カフェチェーンSV・教育担当を経て独立。<br>
+                            「声」と「言葉」の力で、企業のブランディングを支援する。<br>
+                            ナレーターとして数々のTVCM、企業動画に出演。<br>
+                            現在は「経営者の右腕」として、採用広報やPR戦略の立案・実行までをワンストップで提供する。
+                        </p>
+                    </div>
+                </div>
+                <div class="slide-number">9 / 10</div>
             </section>
 
             <!-- 7. End -->
@@ -455,9 +564,6 @@
                         Nyct Studio
                     </h1>
                     <p>Producer / Narrator : Nayuta Akiyama</p>
-                    <p style="margin-top: 40px; font-size: 0.8em; color: #666;">
-                        Partner: Gyakko Inc.
-                    </p>
                 </div>
             </section>
 
