Soften tone, center layout, and adjust pricing presentation

--- a/star_maker/index.html
+++ b/star_maker/index.html
@@ -449,9 +449,10 @@
             </section>
 
             <!-- 5. Market Rates -->
-            <section>
-                <h2>4. 費用感：選べる「松竹梅」</h2>
-                <p>ご予算と目的に応じて選定可能です。「竹」プランが最もコストパフォーマンスに優れています。</p>
+            <section style="text-align: center;">
+                <h2 style="border-left:none; display:inline-block; border-bottom: 1px dashed #777;">4. 目的別・投資シミュレーション
+                </h2>
+                <p>「〜したいなら、これくらい」という目安です。無理な売り込みは一切しません。</p>
                 <div class="cols dense-text" style="margin-top:10px;">
                     <div class="col-4">
                         <div class="box">
@@ -492,6 +493,10 @@
                         </div>
                     </div>
                 </div>
+                <p style="text-align:center; font-size:0.8em; margin-top:20px; color:#777;">
+                    ※上記は「目的を達成するための概算投資額」です。<br>
+                    ご予算に合わせて柔軟にプランを組み立てます。
+                </p>
                 <div class="slide-number">5 / 7</div>
             </section>
 
@@ -500,15 +505,16 @@
                 <h2 style="border-left: none; text-align: center;">なぜ、「今」やるべきか？</h2>
                 <div class="box" style="padding: 30px; border: none; background: transparent;">
                     <p style="font-size: 1.5em !important; text-align: center; margin-bottom: 30px;">
-                        「忙しい」と言っている間に、<br>
-                        ライバルは「発信」を始めています。
+                        社長の「時間」と「心」に、<br>
+                        もっと余裕を持ってほしい。
                     </p>
                     <p style="text-align: center;">
                         私がいただくのは「制作費」ではありません。<br>
                         <strong>「社長が本来やるべき仕事に集中するための時間」への投資</strong>です。
                     </p>
                     <p style="text-align: center; font-weight: bold; margin-top: 30px;">
-                        さあ、社長の物語を、世界に公開しましょう。
+                        採用も、営業も、動画という「分身」に任せて、<br>
+                        次の大きな挑戦へ向かいましょう。
                     </p>
                 </div>
                 <div class="slide-number">7 / 10</div>
